# MultiDesk-Decrypt

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
multidesk_decrypt/: __init__.py  __main__.py  core.py  exceptions.py  logger.py  utils.py
tests/: test_multidesk.py
tests/fixtures/: MultiDesk.multidesk  MultiDesk.xml
