[build-system]
requires = ["setuptools>=65.5.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multidesk-decrypt"
requires-python = "~=3.10"
authors = [
  { name = "Paradoxis", email = "paradoxis@users.noreply.github.com" }
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Information Technology",
  "Typing :: Typed",
]
dependencies = [
  "defusedxml>=0.7.1"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = [
  "ruff>=0.3.3",
]

[project.scripts]
multidesk-decrypt = "multidesk_decrypt.__main__:main"

[tool.isort]
profile = "black"
known_first_party = ["multidesk_decrypt"]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
namespaces = true
include = ["multidesk_decrypt"]

[tool.setuptools.package-data]
multidesk_decrypt = []

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["multidesk_decrypt"]
